# rebuilder-evergreen-tvevents

./: .env.example  .gitignore  .windsurfrules  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  environment-check.sh  input.md  otel-collector-config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scope.md
.github/: copilot-instructions.md
charts/: Chart.yaml  values.yaml
cntools_py3/: .gitignore  README.md  catalog-info.yaml  setup_all.py
developer-agent/: config.md  skill.md
docs/: component-overview.md  data-migration-mapping.md  feature-parity.md  observability.md  target-architecture.md
output/: candidate_1.md  feasibility.md  legacy_assessment.md  modernization_opportunities.md  prd.md  process-feedback.md  summary-of-work.md
output/rebuilder-redis-module/: .env.example  README.md  pyproject.toml
output/rebuilder-redis-module/src/rebuilder_redis/: __init__.py  client.py  config.py  exceptions.py
output/rebuilder-redis-module/tests/: conftest.py  test_client.py  test_config.py
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/: Dockerfile  README.md  catalog-info.yaml  entrypoint.sh  env.list  environment-check.sh  pyproject.toml  pytest.ini  requirements-dev.txt  skaffold.yaml
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/app/: __init__.py  main.py  routes.py
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/charts/: Chart.yaml  README.md  values.yaml
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/charts/templates/: Dapr.yaml  Deployment.yaml  ExternalSecret.yaml  HTTPRoute.yaml  Namespace.yaml  OtelCollector.yaml  ScaledObject.yaml  Service.yaml  ServiceAccount.yaml  _common.tpl  _container.tpl  _env.tpl  _httproute.tpl  _metadata.tpl  _pod.tpl  _resource.tpl  _validate.tpl
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/charts/tests/: README.md  dapr_test.yaml  deployment_test.yaml  externalsecret_test.yaml  httproute_test.yaml  namespace_test.yaml  otelcollector_test.yaml  poddisruptionbudget_test.yaml  scaledobject_test.yaml  service_test.yaml  serviceaccount_test.yaml  validation_test.yaml
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/cves/: gnutls28-CVE-2025-32989.vex.json  gnutls28-CVE-2025-32990.vex.json  protobuf-CVE-2025-4565.vex.json  urllib3-CVE-2025-50181.vex.json
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/docs/: DAPR.md  DAPR_TALK_TRACK.md
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/docs/presentation/: PRESENTATION.html  PRESENTATION.md  TLDR.md
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/docs/presentation/themes/: corporate-clean.css  corporate.css
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/hooks/: pre-commit
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/scripts/: ecr-docker-login.sh  inscape-clusters-login.sh  lock.sh  skaffold-build-before-hook.sh  skaffold-deploy-after-hook.sh  skaffold-deploy-before-hook.sh
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/tests/: test-helm-template.sh  test-s3.sh
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/tests/init/: test_init.py
rebuild-inputs/evergreen-tvevents/adjacent/rebuilder-evergreen-template-repo-python/tests/routes/: routes_test.py
rebuild-inputs/evergreen-tvevents/repo/: Dockerfile  README.md  catalog-info.yaml  entrypoint.sh  env.list  environment-check.sh  kind-config.yaml  monitored-paths.txt  pyproject.toml  pytest.ini  requirements-dev.txt
rebuild-inputs/evergreen-tvevents/repo/app/: __init__.py  dbhelper.py  event_type.py  routes.py  utils.py
rebuild-inputs/evergreen-tvevents/repo/charts/: Chart.yaml  README.md  values.yaml
rebuild-inputs/evergreen-tvevents/repo/charts/templates/: ClusterDeployment.yaml  ClusterOtelCollector.yaml  HTTPRoute.yaml  KongUpstreamPolicy.yaml  LocalDeployment.yaml  LocalOtelCollector.yaml  LocalSecrets.yaml  O11ySecrets.yaml  PodDisruptionBudget.yaml  PrNamespace.yaml  ScaledObject.yaml  SecretStore.yaml  ServiceAccount.yaml  _helpers.tpl  tv-events-service.yaml
rebuild-inputs/evergreen-tvevents/repo/cves/: gnutls28-CVE-2025-32988.vex.json  gnutls28-CVE-2025-6395.vex.json  pam-CVE-2025-6020.vex.json  tar-CVE-2025-45582.vex.json
rebuild-inputs/evergreen-tvevents/repo/docs/: AGA_KONG_HIGH_AVAILABILITY.md
rebuild-inputs/evergreen-tvevents/repo/hooks/: pre-commit
rebuild-inputs/evergreen-tvevents/repo/scripts/: ecr-browser.sh  ecr-docker-login.sh  traffic-shift.sh  traffic-sim.sh
rebuild-inputs/evergreen-tvevents/repo/tests/db_helper/: db_helper_test.py
rebuild-inputs/evergreen-tvevents/repo/tests/event_type/: acr_tuner_data_event_type_test.py  event_type_test.py  platform_telemetry_event_type_test.py
rebuild-inputs/evergreen-tvevents/repo/tests/init/: test_init.py
rebuild-inputs/evergreen-tvevents/repo/tests/routes/: routes_test.py
rebuild-inputs/evergreen-tvevents/repo/tests/utils/: flatten_request_json_test.py  generate_output_json_test.py  get_event_type_mapping_test.py  is_blacklist_channel_test.py  params_match_check_test.py  push_changes_to_firehose_test.py  send_to_valid_firehose_test.py  should_obfuscate_channel_test.py  timestamp_check_test.py  unix_time_to_ms_test.py  validate_request_test.py  verify_required_params_test.py
scripts/: e2e-full.sh  e2e-smoke.sh  e2e_smoke_test.py  entrypoint.sh  environment-check.sh  lock.sh  seed_db.sql
sre-agent/: config.md  skill.md
terraform/: main.tf  outputs.tf  variables.tf
tests/: TEST_RESULTS.md  __init__.py  conftest.py  test_api.py  test_blacklist.py  test_cache.py  test_event_types.py  test_event_types_output.py  test_flatten.py  test_kafka_producer.py  test_models.py  test_obfuscation.py  test_ops.py  test_ops_endpoints.py  (+6 more)
(+206 files in other folders)
