[project]
name = "tvevents-k8s"
version = "0.1.0"
description = "TV event ingestion service — validates, transforms, and delivers smart TV telemetry to Kafka"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9.9",
    "confluent-kafka>=2.3.0",
    "jsonschema>=4.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-psycopg2>=0.46b0",
    "opentelemetry-instrumentation-logging>=0.46b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pip-audit>=2.7.0",
    "radon>=6.0",
    "vulture>=2.11",
    "interrogate>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["tvevents"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "psycopg2.*",
    "psycopg2.extras.*",
    "jsonschema.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/tvevents"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
fail-under = 50
